--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-3">
                         <h4 class="vanishing-featured-title"><span class="text-muted">Acces</span>sories <i class="bi bi-headset px-2 text-white"></i></h4>
-                        <a href="#" class="text-decoration-none">
+                        <a href="../Accessories/accessories.html" class="text-decoration-none">
                             <div class="featured-accessories d-flex align-items-center justify-content-center">
                                 <div class="overlay d-flex align-items-center justify-content-center">
                                     <div class="featured-title" >
