--- a/pages/products/product-1.html
+++ b/pages/products/product-1.html
@@ -127,11 +127,13 @@
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
                 </div>
                 <p>
-                    <span>Description <i class="bi bi-text-indent-left"></i></span>
+                    <strong>
+                        Description <i class="bi bi-text-indent-left"></i>
+                    </strong>
                     <br>
                     Accelerate your entire PC experience with the fast, powerful NVIDIA GeForce GT 1030 graphics card.
                     Its award-winning NVIDIA Pascal architecture, powerful graphics engine, and state-of-the-art
-                    technologies give you the performance upgrade you need to drive today’s most demanding PC
+                    technologies give you the performance upgrade you need to drive today's most demanding PC
                     applications. Unleash your creativity with stunning HD video and picture editing and enjoy
                     incredible gaming. Now, you can do it all. You can even get easy driver updates and one-click game
                     optimization with GeForce Experience
