keyboard & accessories price

--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -114,7 +114,7 @@
     
 
       <div class="col-4">
-          <a href="#" class="text-decoration-none">
+          <a href="./sub-categories/keyboard.html" class="text-decoration-none">
             <img src="./images/image-3.jpg" alt="">
               <h4>Gaming Keyboard</h4>
           </a>
@@ -184,7 +184,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$121.99<br><span class="save" style="font-size:13px;">Save $28</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
+                      <p>$79.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -212,7 +212,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$349.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$389.99</span></p>
+                      <p>$59.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$79.99</span></p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -240,7 +240,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$229.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$269.99</span></p>
+                      <p>$191.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -268,7 +268,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$389.99<br><span class="save" style="font-size:13px;">Save $140</span> <span class="text-decoration-line-through" style="font-size:12px;">$529.99</span></p>
+                      <p>$249.99<br><span class="save" style="font-size:13px;">Save $100</span> <span class="text-decoration-line-through" style="font-size:12px;">$349.99</span></p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -295,7 +295,7 @@
 
             <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                 <div class="price mt-2">
-                    <p>$121.99<br><span class="save" style="font-size:13px;">Save $28</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
+                    <p>$149.99</p>
                 </div>
                 <div class="cart mt-2">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -323,7 +323,7 @@
 
           <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
               <div class="price mt-2">
-                  <p>$121.99<br><span class="save" style="font-size:13px;">Save $28</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
+                  <p>$229.99</p>
               </div>
               <div class="cart mt-2">
                   <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -350,7 +350,7 @@
 
         <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
             <div class="price mt-2">
-                <p>$121.99<br><span class="save" style="font-size:13px;">Save $28</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
+                <p>$319.99</p>
             </div>
             <div class="cart mt-2">
                 <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -377,7 +377,7 @@
 
       <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
           <div class="price mt-2">
-              <p>$121.99<br><span class="save" style="font-size:13px;">Save $28</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
+              <p>$77.99<br><span class="save" style="font-size:13px;">Save $2</span> <span class="text-decoration-line-through" style="font-size:12px;">$79.99</span></p>
           </div>
           <div class="cart mt-2">
               <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
