--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -135,7 +135,7 @@
     </div>
 
     <div class="col-4">
-        <a href="#" class="text-decoration-none">
+        <a href="./sub-categories/controllers.html" class="text-decoration-none">
           <img src="./images/image-6.jpg" alt="">
             <h4>Gaming Controllers</h4>
         </a>
