--- a/pages/Accessories/sub-categories/controllers.html
+++ b/pages/Accessories/sub-categories/controllers.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gaming Keyboard</title>
+  <title>Gaming Controllers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -78,7 +78,7 @@
     <!-- HEADER END -->
 <!-- Gaming Headset -->
 <div class="container-lg m-lg-auto products ">
-    <h2 class="title">Gaming Keyboard</h2>
+    <h2 class="title">Gaming Controllers</h2>
     <div class="right text-center">
       <label for="dropdown">Sort by:</label>
       <select name="dropdown" id="dropdown" >
@@ -97,8 +97,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-1.jpg" >
-                    <h4>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back Lighting - Lunar Light</h4>
+                    <img src="../images/conts-p.webp" >
+                    <h4>SCUF Instinct Pro Wireless Performance Controller for Xbox Series X|S, Xbox One, PC, and Mobile - Steel Gray</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -112,7 +112,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$159.99</p>
+                        <p>$229.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -125,8 +125,9 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-2.webp" >
-                    <h4>CORSAIR - K70 Pro Mini Wireless 60% RGB Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with swappable MX switches - Black</h4>
+                    <img src="../images/conts-1.jpg" >
+                    <h4>Microsoft - Elite Series 2 Core Wireless Controller for Xbox One, Xbox Series X, and Xbox Series S - White
+                    </h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -140,7 +141,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$149.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$179.99</span></p>
+                        <p>$129.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -153,8 +154,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-3.3.webp" >
-                    <h4><h4>Razer - Huntsman Mini 60% Wired Optical Clicky Switch Gaming Keyboard with Chroma RGB Backlighting - Black</h4></h4>
+                    <img src="../images/conts-2.jpg" >
+                    <h4><h4>Turtle Beach - Recon Controller Wired Controller for Xbox Series X, Xbox Series S, Xbox One & Windows PCs with Remappable Buttons - Black</h4></h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -168,7 +169,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$69.99<br><span class="save" style="font-size:13px;">Save $50</span> <span class="text-decoration-line-through" style="font-size:12px;">$119.99</span></p>
+                        <p>$39.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -181,8 +182,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-4.webp" >
-                    <h4>Logitech - G815 LIGHTSYNC Full-size Wired Mechanical GL Tactile Switch Gaming Keyboard with RGB Backlighting - White</h4>
+                    <img src="../images/conts-4.webp" >
+                    <h4>Microsoft - Xbox Wireless Controller for Windows Devices, Xbox Series X, Xbox Series S, Xbox One + USB-C Cable - Carbon Black</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -196,7 +197,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$129.99<br><span class="save" style="font-size:13px;">Save $70</span> <span class="text-decoration-line-through" style="font-size:12px;">$199.99</span></p>
+                        <p>$59.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -209,8 +210,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-5.png" >
-                    <h4>SteelSeries - Apex Pro 2023 TKL Wired Mechanical OmniPoint Adjustable Actuation Switch Gaming Keyboard with RGB Backlighting - Black</h4>
+                    <img src="../images/conts-5.jpg" >
+                    <h4>Thrustmaster - T80 Ferrari 488 GTB Edition Racing Wheel for PlayStation 5, 4 and Windows - Black</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -224,7 +225,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$18.99</p>
+                      <p>$95.99<br><span class="save" style="font-size:13px;">Save $34</span> <span class="text-decoration-line-through" style="font-size:12px;">$129.99</span></p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -237,9 +238,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-6.webp" >
-                    <h4>
-                      HyperX - Alloy Origins 65% Compact Wired Mechanical Red Linear Switch Gaming Keyboard with RGB Lighting - Black</h4>
+                    <img src="../images/conts-6.jpg" >
+                    <h4>8BitDo - Ultimate Bluetooth Controller for Nintento Switch and Windows PCs with Dock - White</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -253,7 +253,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                      <p>$69.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
+                      <p>$69.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -266,8 +266,8 @@
             <div class="product-title-star flex-grow-1">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-7.jpg" >
-                    <h4>ROCCAT - Vulcan TKL Compact Mechanical Gaming Keyboard with Titan Switch Linear, RGB Lighting, and Anodized Aluminum Top Plate - Black</h4>
+                    <img src="../images/conts-7.jpg" >
+                    <h4> RIG - Nacon Revolution X Controller for Xbox Series X|S, Xbox One, and Windows 10/11 Black</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -281,7 +281,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$129.99</p>
+                        <p>$99.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -294,9 +294,8 @@
             <div class="product-title-star flex-grow-1 ">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/key-8.2.jpg" >
-                    <h4>
-                      Logitech - G713 Aurora Collection TKL Wired Mechanical Tactile Switch Gaming Keyboard for PC/Mac with Palm Rest Included - White Mist</h4>
+                    <img src="../images/conts-8.jpg" >
+                    <h4>Logitech - G920 Driving Force Racing Wheel and pedals for Xbox Series X|S, Xbox One, PC - Black</h4>
                 </a>
             </div>
             <div class="product-price-cart">
@@ -310,7 +309,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$147.99<br><span class="save" style="font-size:13px;">Save $22</span> <span class="text-decoration-line-through" style="font-size:12px;">$169.99</span></p>
+                        <p>$299.99</p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -322,8 +321,8 @@
           <div class="product-title-star flex-grow-1">
               <a href="#" class="text-decoration-none">
                   <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                  <img src="../images/key-p.jpg" >
-                  <h4>Keychron Q5 QMK 100 Keys Fully Assembled Knob Custom Mechanical Keyboard - Carbon Black - Red [Q5M1]</h4>
+                  <img src="../images/conts-9.jpg" >
+                  <h4> Thrustmaster - Ferrari 458 Spider Racing Wheel for Xbox One - Black/Red/Yellow</h4>
               </a>
           </div>
           <div class="product-price-cart">
@@ -337,7 +336,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$191.89</p>
+                      <p>$129.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -350,8 +349,8 @@
           <div class="product-title-star flex-grow-1">
               <a href="#" class="text-decoration-none">
                   <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                  <img src="../images/key-10.2.jpg" >
-                  <h4>Logitech - MX Mechanical Full size Wireless Mechanical Tactile Switch Keyboard for Windows/macOS with Backlit Keys - Graphite</h4>
+                  <img src="../images/conts-10.webp" >
+                  <h4>SteelSeries - Stratus Duo Wireless Gaming Controller for Windows, Chromebooks, Android, and Select VR Headsets - Black</h4>
               </a>
           </div>
           <div class="product-price-cart">
@@ -365,7 +364,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$163.99<br><span class="save" style="font-size:13px;">Save $6</span> <span class="text-decoration-line-through" style="font-size:12px;">$169.99</span></p>
+                      <p>$59.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -378,8 +377,8 @@
           <div class="product-title-star flex-grow-1">
               <a href="#" class="text-decoration-none">
                   <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                  <img src="../images/key-11.2.avif" >
-                  <h4>SteelSeries - Apex Pro Mini 60% Wired Mechanical OmniPoint Adjustable Actuation Switch Gaming Keyboard with RGB Backlighting - Black</h4>
+                  <img src="../images/conts-11.webp" >
+                  <h4>Logitech - Driving Force Shifter for Xbox Series X|S, Xbox One, and PlayStation 4 & 5 - Black/Silver</h4>
               </a>
           </div>
           <div class="product-price-cart">
@@ -393,7 +392,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$141.99<br><span class="save" style="font-size:13px;">Save $38</span> <span class="text-decoration-line-through" style="font-size:12px;">$179.99</span></p>
+                      <p>$59.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -406,8 +405,8 @@
           <div class="product-title-star flex-grow-1 ">
               <a href="#" class="text-decoration-none">
                   <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                  <img src="../images/key-12.webp" >
-                  <h4>CORSAIR - K65 RGB Mini Wired 60% Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with PBT Double-Shot Keycaps - White</h4>
+                  <img src="../images/conts-12.jpg" >
+                  <h4>Thrustmaster - T.Flight Hotas 4 for PlayStation 4, PlayStation 5, and PC</h4>
               </a>
           </div>
           <div class="product-price-cart">
@@ -421,7 +420,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$109.99</p>
+                      <p>$89.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
