products details of headset

--- a/pages/Accessories/sub-categories/gaming-headset.html
+++ b/pages/Accessories/sub-categories/gaming-headset.html
@@ -95,9 +95,9 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../products-details/headset-details.html" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="../images/headset-1.webp" >
+                    <img src="../images/headset-1.2.jpg" >
                     <h4>Sony - INZONE H3 Wired Gaming Headset - White</h4>
                 </a>
             </div>
