--- a/pages/Accessories/sub-categories/gaming-mouse.html
+++ b/pages/Accessories/sub-categories/gaming-mouse.html
@@ -95,7 +95,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../products-details/mouse-details.html" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../images/product2-1.jpg" >
                     <h4>ROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor and Titan Wheel - Black</h4>
