--- a/pages/Accessories/sub-categories/keyboard.html
+++ b/pages/Accessories/sub-categories/keyboard.html
@@ -95,7 +95,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../products-details/keyboard-details.html" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../images/key-1.jpg" >
                     <h4>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back Lighting - Lunar Light</h4>
