controller product details

--- a/pages/Accessories/sub-categories/controllers.html
+++ b/pages/Accessories/sub-categories/controllers.html
@@ -95,7 +95,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../products-details/controller-details.html" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../images/conts-p.webp" >
                     <h4>SCUF Instinct Pro Wireless Performance Controller for Xbox Series X|S, Xbox One, PC, and Mobile - Steel Gray</h4>
