--- a/Pages/desktop.html
+++ b/Pages/desktop.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./desktop.css" />
+    <link rel="stylesheet" href="../styles/desktop.css" />
 
     <title>Shop and Game</title>
   </head>
@@ -39,7 +39,7 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="./logo.png" width="150">
+                            <img src="../images/logo2.png" width="150">
                         </a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="../deskproduct.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./image/6.jpg" >
+                        <img src="../images/6.jpg" >
                         <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
                             Model:Y60BB2090SKU:6500572</h4>
                     </a>
@@ -130,7 +130,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./2.jpg" >
+                        <img src="../images/2.jpg" >
                         <h4>CyberPowerPC - Gamer Supreme Gaming Desktop - AMD Ryzen 7 5700 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - White
                           Model: SLC8600BSTV4
                           SKU: 6500513</h4>
@@ -160,7 +160,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./3.jpg" >
+                        <img src="../images/3.jpg" >
                         <h4>iBUYPOWER - SlateMESH Gaming Desktop - Intel i7-12700F - 16GB DDR4 Memory - NVIDIA GeForce RTX 3060 - 1TB HDD + 500 NVMe GB SSD - Black
                           Model: SlateMESH2070
                           SKU: 6500569</h4>
@@ -190,7 +190,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./4,4.jpg" >
+                        <img src="../images/4,4.jpg" >
                         <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 5900X - 64GB Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD + 6TB HDD - Black
                           Model: TGMSETRTH0B25BM
                           SKU: 6441381</h4>
@@ -220,7 +220,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./5,5.jpg" >
+                        <img src="../images/5,5.jpg" >
                         <h4>Alienware Aurora R13 Gaming Desktop - Intel Core i7 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - Liquid Cooling - Lunar Light
                           Model:AWAUR13-7400WHT-PUSSKU:6516611</h4>
                     </a>
@@ -249,7 +249,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./image/1,1,1.jpg" >
+                        <img src="../images/1,1,1.jpg" >
                         <h4>CLX - SET Gaming Desktop - AMD Ryzen 5 3600 - 16GB Memory - NVIDIA GeForce RTX 3060 Ti - 240GB SSD + 2TB HDD
                             Model:TGMSETRTM0C00BM SKU:6444778</h4>
                     </a>
@@ -278,7 +278,7 @@
                 <div class="product-title-star flex-grow-1">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./7.jpg" >
+                        <img src="../images/7.jpg" >
                         <h4>iBUYPOWER TraceMR Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD - Black
                           Model:TraceMR2040SKU:6500566</h4>
                     </a>
@@ -307,7 +307,7 @@
                 <div class="product-title-star flex-grow-1 ">
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                        <img src="./8,8.jpg" >
+                        <img src="../images/8,8.jpg" >
                         <h4>Skytech Gaming - Prism II Gaming PC i7-11700K - 32G RGB Memory - NVIDIA GeForce RTX 3080 - 1TB Gen4 SSD - 360mm AIO - White
                           Model:ST-PRISM2W-0285-BUSKU:6471869</h4>
                     </a>
@@ -335,7 +335,7 @@
               <div class="product-title-star flex-grow-1 ">
                   <a href="#" class="text-decoration-none">
                       <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                      <img src="./9,9.jpg" >
+                      <img src="../images/9,9.jpg" >
                       <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 7950X - 64GB DDR5 4800 Memory - GeForce RTX 4090 - 1TB M.2 NVMe SSD + 6TB HDD - White
                         Model:TGMSETRTH2A04WMSKU:6523805</h4>
                   </a>
@@ -363,7 +363,7 @@
             <div class="product-title-star flex-grow-1 ">
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                    <img src="./10.jpg" >
+                    <img src="../images/10.jpg" >
                     <h4>Acer - Predator Orion 5000 Gaming Desktop - Intel Core i7-12700F - 16GB DDR5 Memory - NVIDIA GeForce RTX 3080 - 1TB Gen 4 SSD
                       Model:PO5-640-UB12SKU:6500695</h4>
                 </a>
@@ -413,7 +413,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star"></i>
                     </div>
-                    <img src="./user-1.webp">
+                    <img src="../images/user-1.webp">
                     <h3>Katie Sample</h3>
                 </div>
 
@@ -427,7 +427,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i>
                     </div>
-                    <img src="./user-2.webp">
+                    <img src="../images/user-2.webp">
                     <h3>Beardman Sample</h3>
                 </div>
 
@@ -441,7 +441,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                     </div>
-                    <img src="./user-3.webp">
+                    <img src="../images/user-3.webp">
                     <h3>Geek Sample</h3>
                 </div>
             </div>
@@ -454,19 +454,19 @@
         <div class="container-lg">
             <div class="row d-flex justify-content-around align-items-center">
                 <div class="col-5">
-                    <img src="./brand-1.png">
+                    <img src="../images/brand-1.png">
                 </div>
                 <div class="col-5">
-                    <img src="./brand-2.png">
+                    <img src="../images/brand-2.png">
                 </div>
                 <div class="col-5">
-                    <img src="./brand-3.png">
+                    <img src="../images/brand-3.png">
                 </div>
                 <div class="col-5">
-                    <img src="./brand-4.png">
+                    <img src="../images/brand-4.png">
                 </div>
                 <div class="col-5">
-                    <img src="./brand-5.png">
+                    <img src="../images/brand-5.png">
                 </div>
             </div>
         </div>
@@ -478,7 +478,7 @@
         <div class="row d-flex justify-content-center align-items-start pt-4 ">
             <div class="col-3">
                 <a href="#">
-                    <img src="./logo-white.png" class="mb-3">
+                    <img src="../images/logo2.png" class="mb-3">
                 </a>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
             </div>
