--- a/deskproduct.html
+++ b/deskproduct.html
@@ -100,7 +100,7 @@
                         <img src="./images/6,6,6.jpg" width="50%" class="small-image">
                     </div>
                     <div class="col-3">
-                        <img src="/images/6,6,6,6.jpg" width="50%" class="small-image">
+                        <img src="./images/6,6,6,6.jpg" width="50%" class="small-image">
                     </div>
                 </div>
             </div>
