--- a/deskproduct.html
+++ b/deskproduct.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./styles/deskproduct.css">
+    <link rel="stylesheet" href="./desktop/deskproduct.css">
 
     <title>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black - Shop and Game</title>
 </head>
