--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../styles/desktop.css" />
+    <link rel="stylesheet" href="../desktop/desktop.css" />
 
     <title>Shop and Game</title>
   </head>
@@ -99,7 +99,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../deskproduct.html" class="text-decoration-none">
+                    <a href="../desktop/product.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/6.jpg" >
                         <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
