--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -39,7 +39,7 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="../images/logo2.png" width="150">
+                            <img src="../home/images/logo-white2.png" width="150">
                         </a>
                     </div>
                 </div>
@@ -529,42 +529,31 @@
 <!---------------- SCRIPTS ------------->
 <!---- --------- BOOTSTRAP  ------------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-crossorigin="anonymous"></script>
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 
 <!---------------- BURGER MENU ON MOBILE ------------->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
 <!-- JQUERY FOR STICKY HEADER/NAV  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script type="text/javascript">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script type="text/javascript">
 
-    $(function(){
+        $(function(){
 
-        $(window).scroll(function(){
+            $(window).scroll(function(){
 
-            if($(window).scrollTop() > 0) {
-                $(".header").addClass("sticky");
-            } else {
-                $(".header").removeClass("sticky");
-            }
+                if($(window).scrollTop() > 0) {
+                    $(".header").addClass("sticky");
+                } else {
+                    $(".header").removeClass("sticky");
+                }
+
+            });
 
         });
-
-    });
-</script>
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.next').click(function(){
-      $('.pagination').find('.pageNumber active').next().addClass('active');
-      $('.pagination').find('.pageNumber active').prev().removeClass('active');
-    })
-    $('.prev').click(function(){
-      $('.pagination').find('.pageNumber active').prev().addClass('active');
-      $('.pagination').find('.pageNumber active').next().removeClass('active');
-    })
-  })
-</script>
+        
+    </script>
 </body>
 </html>
