--- a/pages/desktop/product.html
+++ b/pages/desktop/product.html
@@ -30,30 +30,27 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="../images/logo-white.png" width="150">
+                            <img src="../home/images/logo-white2.png" width="150">
                         </a>
                     </div>
                 </div>
                 <div class="col-6 d-flex justify-content-end">
-                    <nav class="navbar d-flex ">
+                    <nav class="navbar d-flex "> 
                         <input type="checkbox" id="check">
                         <label for="check" class="checkbtn mx-2 ">
                             <i class="bi bi-list"></i>
                         </label>
                         <ul class="first-ul d-flex list-unstyled mb-0" id="mainmenu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link ">Home</a>
+                                <a href="#" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle active" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Products
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a>
-                                    </li>
-                                    <li><a href="../components/components.html" class="dropdown-item active">Cards and
-                                            Components</a></li>
+                                    <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
+                                    <li><a href="#" class="dropdown-item">Cards and Components</a></li>
                                     <li><a href="#" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
@@ -74,7 +71,7 @@
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
                                     <span class="large-screen-hidden">
-                                        Account
+                                        Account 
                                     </span><i class="bi bi-person-circle mx-2" title="Profile"></i>
                                 </a>
                             </li>
@@ -84,6 +81,8 @@
             </div>
         </div>
     </header>
+
+    <!-- product -->
 
     <div class="container-lg mx-auto product-page">
         <div class="row product-page-row">
@@ -505,54 +504,32 @@
 
      <!-- SCRIPTS  -->
      <!-- BOOTSTRAP  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-
-    <!-- BURGER MENU ON MOBILE -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-
-    <!-- JQUERY FOR STICKY HEADER/NAV  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript">
-
-        $(function () {
-
-            $(window).scroll(function () {
-
-                if ($(window).scrollTop() > 0) {
-                    $(".header").addClass("sticky");
-                } else {
-                    $(".header").removeClass("sticky");
-                }
-
-            });
-
-        });
-
-    </script>
-
-    <!-- JS FOR PRODUCT PAGE  -->
-
-    <script>
-        let productImage = document.getElementById("productImage");
-        let smallImage = document.getElementsByClassName("small-image");
-
-        smallImage[0].onclick = function () {
-            productImage.src = smallImage[0].src;
-        }
-        smallImage[1].onclick = function () {
-            productImage.src = smallImage[1].src;
-        }
-        smallImage[2].onclick = function () {
-            productImage.src = smallImage[2].src;
-        }
-        smallImage[3].onclick = function () {
-            productImage.src = smallImage[3].src;
-        }
-    </script>
-
-</body>
-
-</html>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+     crossorigin="anonymous"></script>
+ 
+ <!---------------- BURGER MENU ON MOBILE ------------->
+ <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+ 
+ 
+ <!-- JQUERY FOR STICKY HEADER/NAV  -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+     <script type="text/javascript">
+ 
+         $(function(){
+ 
+             $(window).scroll(function(){
+ 
+                 if($(window).scrollTop() > 0) {
+                     $(".header").addClass("sticky");
+                 } else {
+                     $(".header").removeClass("sticky");
+                 }
+ 
+             });
+ 
+         });
+         
+     </script>
+ </body>
+ </html>
