--- a/pages/products/product-2.html
+++ b/pages/products/product-2.html
@@ -15,7 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles/product.css">
+    <link rel="stylesheet" href="../products/styles/product.css">
+    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black - Shop and Game</title>
 </head>
@@ -361,6 +363,8 @@
             </div>
         </div>
     </div>
+        </div>
+        </div>
 
 
     <!-- ------------------------ TESTIMONIAL ---------------------- -->
