--- a/pages/desktop/product.html
+++ b/pages/desktop/product.html
@@ -30,7 +30,7 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="../images/logo-white.png" width="150">
+                            <img src="../products/images/logo-white.png" width="150">
                         </a>
                     </div>
                 </div>
@@ -214,15 +214,7 @@
                                             <div class="specification-col-rows d-flex">
                                                 <div class="col-6">
                                                     <p><strong>1000 gigabytes <i class="bi bi-info-circle"></i></strong></p>
-                                                </div>
-                                            <div class="specification-col-rows d-flex">
-                                                <div class="col-6">
-                                                    <p><strong>16 gigabytes<i class="bi bi-info-circle"></i></strong></p>
-                                                </div>
-                                            <div class="specification-col-rows d-flex">
-                                                <div class="col-6">
-                                                    <p><strong>SSD<i class="bi bi-info-circle"></i></strong></p>
-                                                </div>   
+                                                </div>  
                                             </div>
                                         </div>
                                     </div>
@@ -448,7 +440,7 @@
             <div class="row d-flex justify-content-center align-items-start pt-4 ">
                 <div class="col-3">
                     <a href="#">
-                        <img src="../images/logo-white.png" class="mb-3">
+                        <img src="../products/images/logo-white.png" class="mb-3">
                     </a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
                 </div>
