--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -477,7 +477,7 @@
         <div class="row d-flex justify-content-center align-items-start pt-4 ">
             <div class="col-3">
                 <a href="#">
-                    <img src="../images/logo2.png" class="mb-3">
+                    <img src="../products/images/logo-white.png" class="mb-3">
                 </a>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
             </div>
