--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -50,7 +50,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item">Cards and Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
