relocating pages and adding banner to the accessories subcategories and fixing product details of desktop

--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -24,7 +24,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../desktop/desktop.css" />
+    <link rel="stylesheet" href="../products/styles/product.css" />
+    <link rel="stylesheet" href="../products/styles/header.css">
 
     <title>Shop and Game</title>
   </head>
@@ -59,8 +60,8 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
-                                    <li><a href="#" class="dropdown-item">Cards and Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../components/components.html" class="dropdown-item">Cards and Components</a></li>
+                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -91,6 +92,19 @@
         </div>
     </header>
 
+    <section class="section-1 d-flex align-items-end">
+        <div class="container-lg banner ">
+            <div class="row-cols-md-2 d-flex align-items-center flex-wrap justify-content-around m-4 banner-row ">
+                <div class="col-6">
+                    <h1>Gaming Desktops</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem, ipsum, <br>Lorem ipsum dolor sit... </p>
+                </div>
+                <div class="col-6 banner-image">
+                </div>
+            </div>
+        </div>
+    </section>
+
     
       <!-- Gaming Desktop -->
 
@@ -99,7 +113,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../desktop/product.html" class="text-decoration-none">
+                    <a href="../products/product-2.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/6.jpg" >
                         <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
@@ -477,7 +491,7 @@
         <div class="row d-flex justify-content-center align-items-start pt-4 ">
             <div class="col-3">
                 <a href="#">
-                    <img src="../images/logo2.png" class="mb-3">
+                    <img src="../home/images/logo-white2.png" class="mb-3">
                 </a>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
             </div>
