--- a/pages/products/product-1.html
+++ b/pages/products/product-1.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../products/styles/product.css">
-    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../products/styles/header.css">
     <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black - Shop and Game</title>
