--- a/pages/products/product-2.html
+++ b/pages/products/product-2.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../products/styles/product.css">
-    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../products/styles/header.css">
     <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black - Shop and Game</title>
@@ -204,27 +204,66 @@
                                         <div class="col-12 specification-col">
                                             <div class="specification-col-rows d-flex">
                                                 <div class="col-6">
-                                                    <p><strong>Intel 12th Generation Core i7 <i class="bi bi-info-circle"></i></strong></p>
+                                                    <p><strong>Processor Model<i class="bi bi-info-circle"></i></strong></p>
+                                                </div>
+                                                <div class="col-6">
+                                                    <p>Intel 12th Generation Core i7</p>
                                                 </div>
                                             </div>
                                             <div class="specification-col-rows d-flex">
                                                 <div class="col-6">
-                                                    <p><strong>NVIDIA GeForce RTX 3070 Ti <i class="bi bi-info-circle"></i></strong></p>
+                                                    <p><strong>Processor Model Number <i class="bi bi-info-circle"></i></strong></p>
+                                                </div>
+                                                <div class="col-6">
+                                                    <p>12700KF</p>
                                                 </div>
                                             </div>
                                             <div class="specification-col-rows d-flex">
                                                 <div class="col-6">
-                                                    <p><strong>1000 gigabytes <i class="bi bi-info-circle"></i></strong></p>
+                                                    <p><strong>Storage Type <i class="bi bi-info-circle"></i></strong></p>
+                                                </div>
+                                                <div class="col-6">
+                                                    <p>SSD</p>
+                                                </div>
+                                            <!-- <div class="specification-col-rows d-flex">
+                                                <div class="col-6">
+                                                    <p><strong>Total Storage Capacity<i class="bi bi-info-circle"></i></strong></p>
+                                                </div>
+                                                <div class="col-6">
+                                                    <p>1000 gigabytes</p>
                                                 </div>
                                             <div class="specification-col-rows d-flex">
                                                 <div class="col-6">
-                                                    <p><strong>16 gigabytes<i class="bi bi-info-circle"></i></strong></p>
-                                                </div>
-                                            <div class="specification-col-rows d-flex">
+                                                    <p><strong>Solid State Drive Capacity<i class="bi bi-info-circle"></i></strong></p>
+                                                </div> 
                                                 <div class="col-6">
-                                                    <p><strong>SSD<i class="bi bi-info-circle"></i></strong></p>
-                                                </div>   
+                                                    <p>1000 gigabytes</p>
+                                                </div>  
                                             </div>
+                                            <div class="specification-col-rows d-flex">
+                                                <div class="col-6">
+                                                    <p><strong>System Memory (RAM) <i class="bi bi-info-circle"></i></strong></p>
+                                                </div> 
+                                                <div class="col-6">
+                                                    <p>16 gigabytes</p>
+                                                </div>  
+                                            </div>
+                                            <div class="specification-col-rows d-flex">
+                                                <div class="col-6">
+                                                    <p><strong>Graphics <i class="bi bi-info-circle"></i></strong></p>
+                                                </div> 
+                                                <div class="col-6">
+                                                    <p>NVIDIA GeForce RTX 3070 Ti</p>
+                                                </div>  
+                                            </div>
+                                            <div class="specification-col-rows d-flex">
+                                                <div class="col-6">
+                                                    <p><strong>Operating System <i class="bi bi-info-circle"></i></strong></p>
+                                                </div> 
+                                                <div class="col-6">
+                                                    <p>Windows 11 Home</p>
+                                                </div>  
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -451,7 +490,7 @@
             <div class="row d-flex justify-content-center align-items-start pt-4 ">
                 <div class="col-3">
                     <a href="#">
-                        <img src="../images/logo-white.png" class="mb-3">
+                        <img src="../home/images/logo-white2.png" class="mb-3">
                     </a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
                 </div>
